# vps-monitor-webui

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  config.toml.example
migrations/: 001_init.sql
scripts/: install.sh
src/: config.rs  error.rs  main.rs  state.rs
src/auth/: middleware.rs  mod.rs  password.rs  session.rs
src/collectors/: docker.rs  mod.rs  pm2.rs  system.rs  systemd.rs
src/db/: audit.rs  mod.rs  sessions.rs  users.rs
src/handlers/: audit.rs  auth.rs  docker.rs  logs.rs  metrics.rs  mod.rs  pm2.rs  processes.rs  services.rs  static_files.rs
static/: app.js  index.html  login.html  style.css
systemd/: vps-monitor.service
