[package]
name = "vps-monitor"
version = "0.1.0"
edition = "2021"
description = "Lightweight, secure VPS monitoring WebUI"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"

axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.5", features = ["derive"] }
toml = "0.8"

rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

argon2 = "0.5"
rand = "0.8"
hex = "0.4"

sysinfo = "0.32"
bollard = "0.17"

rust-embed = { version = "8.5", features = ["debug-embed"] }
mime_guess = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "1"
once_cell = "1"
regex = "1"
async-stream = "0.3"
rpassword = "7"
time = "0.3"
